<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image11" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/dark_shade" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:typeface="monospace"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_50"
        android:text="@string/create_new_password"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_18"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_gravity="center"
        android:typeface="monospace"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="@dimen/padding_too_large_30"
        android:layout_marginRight="@dimen/padding_too_large_30"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/padding_50"
        android:background="@drawable/white_stroke"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/user"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingLeft="@dimen/padding_small_5"
        android:paddingTop="@dimen/padding_small_5"
        android:textColor="#FFFFFF"
        android:textColorHint="#fff" />

    <EditText
        android:id="@+id/retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:typeface="monospace"
        android:layout_marginLeft="@dimen/padding_too_large_30"
        android:layout_marginRight="@dimen/padding_too_large_30"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/padding_extra_large_20"
        android:background="@drawable/white_stroke"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/user"
        android:gravity="center_vertical"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingLeft="@dimen/padding_small_5"
        android:paddingTop="@dimen/padding_small_5"
        android:textColor="#FFFFFF"
        android:textColorHint="#fff" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/retype_password"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="@dimen/padding_too_large_30"
        android:layout_marginRight="@dimen/padding_too_large_30"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:typeface="monospace"
        android:background="@drawable/red_stroke"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="#fff" />


</RelativeLayout>